--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
             </div>
             
             <div class="border-t border-gray-700 mt-6 pt-6 text-center text-gray-400 text-sm">
-                © 2025 日常助手
+                © 2025 狮母助手
             </div>
         </div>
     </footer>
