--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="zh-CN"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>狮母助手 - 实用工具集合</title>
+    <title>海狮工具箱 - 实用工具集合</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.8/dist/chart.umd.min.js"></script>
@@ -248,7 +248,7 @@
                 <div class="mb-4 md:mb-0">
                     <div class="flex items-center space-x-2">
                         <i class="fa fa-wrench text-primary"></i>
-                        <span class="font-bold">狮母助手</span>
+                        <span class="font-bold">海狮工具箱</span>
                     </div>
                     <p class="text-gray-400 text-sm mt-1">让日常生活更便捷&nbsp; &nbsp;&nbsp;</p>
                 </div>
@@ -267,7 +267,7 @@
             </div>
             
             <div class="border-t border-gray-700 mt-6 pt-6 text-center text-gray-400 text-sm">
-                © 2025 狮母助手
+                © 2025 海狮工具箱
             </div>
         </div>
     </footer>
