--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="container mx-auto px-4 py-3 flex justify-between items-center">
             <div class="flex items-center space-x-2">
                 <i class="fa fa-wrench text-primary text-2xl"></i>
-                <h1 class="text-xl md:text-2xl font-bold text-dark">狮母助手</h1>
+                <h1 class="text-xl md:text-2xl font-bold text-dark">海狮工具箱</h1>
             </div>
             
             <!-- 桌面导航 -->
